--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "mdmath.delimiters": "kramdown",
     "mdmath.macros": {
         "\\sinc": "\\operatorname{sinc}",
-        "\\v": "\\mathbf{#1}",
+        "\\v": ["\\mathbf{#1}", 1],
         "\\f": "{F({#1},{#2};{#3};{#4})}"
     }
 }
