--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-    "mdmath.delimiters": "kramdown",
-    "mdmath.macros": {
-        "\\sinc": "\\operatorname{sinc}",
-        "\\v": "\\mathbf{#1}",
-        "\\f": "{F({#1},{#2};{#3};{#4})}"
-    }
+    "mdmath.delimiters": "kramdown"
 }
