--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,41 @@
 {
     "mdmath.delimiters": "kramdown",
     "mdmath.macros": {
-        "\\placeholder": "\text{placeholder}"
+        "\\g": "\\left(#1\\right)",
+        "\\gg": "\\left[#1\\right]",
+        "\\ggg": "\\left\\{#1\\right\\}",
+        "\\abs": "\\left|#1\\right|",
+        "\\norm": "\\left\\|#1\\right\\|",
+        "\\mat": "\\begin{bmatrix}#1\\end{bmatrix}",
+        "\\case": "\\begin{cases}#1\\end{cases}",
+        "\\sinc": "\\operatorname{sinc}",
+        "\\copySign": "\\operatorname{copySign}",
+        "\\ulp": "\\operatorname{ulp}",
+        "\\minNormal": "{N_\\mathrm{min}}",
+        "\\v": "\\mathbf{#1}",
+        "\\tr": "{#1^\\mathrm{T}}",
+        "\\ss": "{#1^\\times}",
+        "\\q": "{#1}",
+        "\\qs": "{#1^{}_\\mathrm{0}}",
+        "\\qv": "\\v{#1}",
+        "\\scalar": "\\operatorname{Sc}",
+        "\\vector": "\\operatorname{\\v{Vec}}",
+        "\\conj": "{#1^*}",
+        "\\inner": "\\left<{#1},{#2}\\right>",
+        "\\dunit": "{\\epsilon}",
+        "\\d": "\\check{#1}",
+        "\\do": "{#1}",
+        "\\di": "{#1'}",
+        "\\ordinary": "\\operatorname{Ordinary}",
+        "\\infinitesimal": "\\operatorname{Infinitesimal}",
+        "\\dq": "\\d{#1}",
+        "\\dqo": "\\do{#1}",
+        "\\dqi": "\\di{#1}",
+        "\\dqos": "\\qs{#1}",
+        "\\dqov": "\\qv{#1}",
+        "\\dqis": "{#1'_\\mathrm{0}}",
+        "\\dqiv": "\\qv{#1}'",
+        "\\f": "{F\\g{{#1},{#2};{#3};{#4}}}",
+        "\\fhav": "\\f{#1}{#2}{\\tfrac{#3}{2}}{\\tfrac{1-{#4}}{2}}"
     }
 }
